k8s/06-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: linkto
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: backend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: linkto
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: linkto
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    tier: redis
