k8s/07-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: linkto
spec:
  rules:
    - host: link.withtanzu.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
